# maggieland

./: .gitignore  AGENTS.md  LICENSE  README.md  README_QUICKSTART.md  cleanup.config.example.yml  pyproject.toml  requirements.txt  run_music_cleanup.bat
.github/workflows/: build-windows.yml
scripts/: build_windows.ps1  make_handoff_zip.py  make_runtime_release.py
src/music_cleanup/: __init__.py  cli.py  config.py  decision.py  metadata.py  models.py  organizer.py  reporting.py  scanner.py  tagger.py
tests/: test_cli.py  test_config.py  test_decision.py  test_fpcalc_resolution.py  test_metadata_errors.py  test_metadata_rate_limit.py  test_organizer.py  test_reporting.py  test_tagger.py
